--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -1,4 +1,4 @@
 <li>
   <%= showProfImage user %>
-  <%= link_to user.name, user %>
+  <%= link_to user.name+' ( @'+user.nickname+' )', user %>
 </li>
