--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -4,7 +4,7 @@
 	<span class="user">
 		<%= link_to comment.user.name+' ( @'+comment.user.nickname+' )' , comment.user %>
 	</span>
-	<span class="content"><%= comment.content %></span>
+	<span class=""><%= comment.content %></span>
 	<span class="timestamp">
 		Posted <%= time_ago_in_words(comment.created_at) %> ago.
 	</span>
