--- a/app/views/microposts/_micropost.html.erb
+++ b/app/views/microposts/_micropost.html.erb
@@ -1,8 +1,10 @@
 <li>
-	<span class="content"><%= link_to micropost.content, micropost %></span>
-	<span class="timestamp">
-		Posted <%= time_ago_in_words(micropost.created_at) %> ago.
-	</span>
+	<div class="contentWrapper">
+			<span class="content"><%= link_to micropost.content, micropost %></span>
+			<span class="timestamp">
+				Posted <%= time_ago_in_words(micropost.created_at) %> ago.
+			</span>
+	</div>
 	<% if current_user?(micropost.user) %>
 	<%= link_to "delete", micropost, method: :delete,
 	data: { confirm: "You sure?" },
