--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -10,6 +10,7 @@
 				<%#= @user.email %>
 			</h1>
 		</section>
+		<h3>user action</h3>
 		<% for item in user_actions @user  %>
 			<div class="newsfeed">
 				<%= item.class %> <br>
@@ -17,6 +18,18 @@
 				</div> <br><br>
 			</div>
 		<% end %>
+		<h3>user action passive</h3>
+		<% for item in user_actions_passive @user  %>
+		<div class="newsfeed">
+			<%= item.class %> <br>
+			<div class="flr newsTimestamp">
+				<% if item != nil %>
+					<%= time_ago_in_words(item.updated_at) %> ago.
+				<% end %>
+			</div> <br><br>
+		</div>
+		<% end %>
+
 	</aside>
 	<div class="span8">
 		<% if @user.microposts.any? %>
