--- a/app/views/shared/_comment_item.html.erb
+++ b/app/views/shared/_comment_item.html.erb
@@ -3,7 +3,7 @@
     <span class="user">
       <%#= link_to comment_item.user.name, comment_item.user %>
     </span>
-    <span class="a"><%= comment_item.content %></span>
+    <span class=""><%= comment_item.content %></span>
     <span class="timestamp">
       Posted <%= time_ago_in_words(comment_item.created_at) %> ago.
     </span>
