--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -2,6 +2,21 @@
   <div class="navbar-inner">
     <div class="container">
       <%= link_to "sample app", root_path, id: "logo" %>
+
+      <%= user_notifications current_user %>
+
+      <%= form_tag({:controller => 'users', :action => 'check_notification'}, {:name => 'check_notification', :remote => true}) do %>
+          <input type="hidden" value="1" name="micropost_id">
+          <%= submit_tag "notification" , {:class => 'notification'} %>
+      <% end %>
+      <script>
+      $("form[name='check_notification']")
+      // .bind("ajax:loading", function(xhr){alert('loading')})
+      .bind("ajax:success", function(data, status, xhr){
+        alert('you checked notifications.'+Date())
+      })
+      </script>
+
       <nav>
         <ul class="nav pull-right">
           <li><%= link_to "Home", root_path %></li>
