--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -420,3 +420,23 @@ button.btn, input[type="submit"].btn{
   background-color: #333;
   border-radius: 30px;
 }
+
+/*2014-01-07*/
+.notification{
+  font-size: 30px;
+  height: 40px;
+  font-family: "mplus-1c-thin";
+  -webkit-transform: rotate(8deg);
+  -moz-transform: rotate(8deg);
+  color:#999;
+  margin:8px 7px;
+  border-radius: 8px;
+  border:none;
+  transition:0.6s;
+  background: rgb(255, 213, 103);
+  &:hover{
+    background: rgb(255, 185, 0);
+    border-radius: 30px;
+    color:#fff;
+  }
+}
