--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -106,7 +106,7 @@ header{
 
 input[type="submit"]{
   outline: 0px;
-  padding: 2px 7px 2px 9px;;
+  // padding: 2px 7px 2px 7px;;
 }
 .pagination{
   margin:60px 0 0;
@@ -390,7 +390,15 @@ button.btn, input[type="submit"].btn{
 //2014-01-01_20-05-53
 .star_submit{
   // background:url(http://l0o0l.info/material/icon/starIcon.png) no-repeat
+  background:url(http://l0o0l.info/material/icon/starIcon.png) no-repeat 8px -5px;
+  padding: 2px 7px 2px 38px;
 }
+.interest_submit{
+  background:url(http://l0o0l.info/material/icon/interestIcon.png) no-repeat 10px 1px;
+  padding: 2px 7px 2px 38px;
+}
+
+
 .already{
   border:1px inset #ccc;
 }
@@ -432,10 +440,10 @@ button.btn, input[type="submit"].btn{
   margin:8px 7px;
   border-radius: 8px;
   border:none;
-  transition:0.6s;
-  background: rgb(255, 213, 103);
+  transition:0.8s;
+  background: #BEF5FF;
   &:hover{
-    background: rgb(255, 185, 0);
+    background: #0C9EE7;
     border-radius: 30px;
     color:#fff;
   }
