--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,6 +1,7 @@
+<% if signed_in? %>
 <div class="modal" id="myModal">
   <div class="modal-header">
-    <a class="close closeBtn" data-dismiss="modal">×</a>
+    <span class="close closeBtn" data-dismiss="modal">×</span>
     <h3>Notifications</h3>
   </div>
   <div class="modal-body">
@@ -9,7 +10,7 @@
     <% end %>
   </div>
   <div class="modal-footer">
-    <a href="" class="btn closeBtn" >Close</a>
+    <span class="btn closeBtn" >Close</span>
   </div>
 </div>
 <script>
@@ -18,6 +19,7 @@ $('.closeBtn').click(function(){
   $('.modal').hide()
 })
 </script>
+<% end %>
 
 <header class="navbar navbar-fixed-top navbar-inverse">
   <div class="navbar-inner">
