--- a/app/views/shared/_user_info.html.erb
+++ b/app/views/shared/_user_info.html.erb
@@ -2,7 +2,7 @@
 	<%= showProfImage current_user %>
 </a>
 <h1>
-	<%= link_to current_user.name , current_user%><br>
+	<%= link_to '@'+current_user.nickname , current_user%><br>
 	<%#= link_to '  @'+current_user.nickname+' ' , current_user  %>
 </h1>
 <span>
