--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -15,7 +15,7 @@
 .common_icons {
     font-family: 'common_icons';
     position:absolute;
-    z-index:100;
+    z-index:-10;
     font-size: 22px;
     margin:3px 11px;
 }
@@ -329,7 +329,7 @@ input {
 .content {
   // display: block;
   font-size: 32px;
-  line-height: 37px;
+  line-height: 48px;
   margin:15px 0;
 }
 .timestamp {
@@ -418,10 +418,22 @@ button.btn, input[type="submit"].btn{
   // background:url(http://l0o0l.info/material/icon/starIcon.png) no-repeat
   // background:url(http://l0o0l.info/material/icon/starIcon.png) no-repeat 8px -5px;
   padding: 2px 7px 2px 38px;
+  background:transparent;
+  z-index: 10;
+  transition:0.4s;
+  &:hover{
+    border-radius: 7px;
+  }
 }
 .interest_submit{
   // background:url(http://l0o0l.info/material/icon/interestIcon.png) no-repeat 10px 1px;
+  background:transparent;
   padding: 2px 7px 2px 38px;
+  z-index: 10;
+  transition:0.4s;
+  &:hover{
+    border-radius: 7px;
+  }
 }
 
 
