change the catch

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -20,9 +20,8 @@
 
 <% else %>
 <div class="center hero-unit">
-	<h1>学生のうちにしか<br>
-		できないこと、<br>
-		ありませんか。</h1>
+	<h1>あなたの『やりたい！』を<br>
+		誰かの『やりたい！』に。</h1>
 <br>
 	<h2>
 <!-- 		はじめての方は
