--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -43,7 +43,7 @@
 <% end %>
 <script>
 $(".rotate").textrotator({
-  animation: "flip",
+  animation: "flipUp",
   separator: ",",
   speed: 2000
 });
