--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -28,7 +28,7 @@
 <!-- 		はじめての方は
 		<a href="/about">about</a>
 		までお飛びなさい -->
-	Honey Circle. は早稲田大学の情報なんとか学科の人向けに作られた「やりたいことを共有できる」サービスです。
+	Honey Circle. は早稲田大学の情報なんとか学科の人向けに作られた「やりたいことを共有する」サービスです。
 	</h2>
 	<% if current_user %>
 	Welcome <%= current_user.name %>!
