--- a/app/views/shared/_feed_item.html.erb
+++ b/app/views/shared/_feed_item.html.erb
@@ -11,7 +11,7 @@
       <% end %>
     </div>
   <% if current_user?(feed_item.user) %>
-    <%= link_to "delete", feed_item, method: :delete, data: { confirm: "You sure?" }, title: feed_item.content, :class => 'delete_button' %>
+    <%#= link_to "delete", feed_item, method: :delete, data: { confirm: "You sure?" }, title: feed_item.content, :class => 'delete_button' %>
     <!-- 一緒にやりたい人がいる場合 -->
     <div class="staredInfo">
       <% if feed_item.stars.length > 0 %>
