--- a/app/views/microposts/show.html.erb
+++ b/app/views/microposts/show.html.erb
@@ -126,7 +126,7 @@
 
 
 		<ol class="comments">
-			<h5>こめんと</h5>
+			<h5>こめんと<span class="common_icons">h</span></h5>
 			<%= render @comments %>
 		</ol>
 		<%= will_paginate @comments %>
