--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -17,6 +17,10 @@
     position:absolute;
     z-index:-10;
     font-size: 22px;
+    margin: 0px 3px;
+}
+
+form .common_icons{
     margin:3px 11px;
 }
 .stars .common_icons{
@@ -24,6 +28,10 @@ color: #ACD45A;
 }
 .interests .common_icons{
 color: #FA9696;
+}
+.newsfeed .comments .common_icons{
+  color:#FFC661;
+  font-size: 15px;
 }
 
 *{
@@ -142,6 +150,11 @@ input[type="submit"]{
   float: right;
   color:#888;
 }
+.newsfeeds {
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
 .newsfeeds h3{
   margin: 55px -7px 10px;
   font-size: 48px;
@@ -151,6 +164,13 @@ input[type="submit"]{
   clear:both;
   border-top: 1px solid #eee;
   padding-top: 5px;
+  .common_icons{
+    position: static;
+    font-size: 18px;
+  }
+  .truncate{
+    word-break: break-all;
+  }
 }
 .flr{
   float: right;
@@ -321,6 +341,9 @@ input {
     padding: 10px 0;
     border-top: 1px solid #e8e8e8;
     clear:both;
+    img {
+      margin-top: -2px;
+    }
   }
 }
 .contentWrapper{
@@ -371,6 +394,7 @@ aside {
   -moz-transition: all 0.3s;
   transition: all 0.3s;
   text-shadow: none;
+  box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.4), 0 1px 2px rgba(0, 0, 0, 0.85)
 }
 .btn-2i {
   border-radius: 50%;
@@ -471,17 +495,19 @@ button.btn, input[type="submit"].btn{
 .notification{
   font-size: 30px;
   height: 40px;
+  min-width:42px;
   font-family: "mplus-1c-thin";
   -webkit-transform: rotate(8deg);
   -moz-transform: rotate(8deg);
-  color:#999;
+  color:#ddd;
   margin:8px 7px;
   border-radius: 8px;
   border:none;
   transition:0.8s;
-  background: #BEF5FF;
+  background: #E45734;
   &:hover{
-    background: #0C9EE7;
+    // background: #0C9EE7;
+    background: #F08A2E;
     border-radius: 30px;
     color:#fff;
   }
