--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,7 +24,7 @@
 		<%= link_to "Sign in with Twitter", "/auth/twitter" , :class => 'signin' %>
 		<% end %>
 
-		<%= debug(params) if Rails.env.development? %>
+		<%#= debug(params) if Rails.env.development? %>
 	</div>
 </body>
 </html>
