--- a/app/views/microposts/show.html.erb
+++ b/app/views/microposts/show.html.erb
@@ -1,23 +1,20 @@
 <% provide(:title, @micropost.content) %>
 <div class="row">
 	<aside class="span4">
-		<section>
-			<h1>
-				id: <%= @micropost.id %> <br>
-				 <%= link_to image_tag(@micropost.user.image ,:size => "50x50"), @micropost.user %>
-				<%#= @micropost.created_at %> <br>
-				<%= @micropost.content %>
-				<%#= @user.email %>
-				<% if current_user == @micropost.user %>
-					<%= link_to "d", @micropost, method: :delete, data: { confirm: '本当に消してしまうん？' }, title: @micropost.content, class:"common_icons", style:"z-index:10" %>
-				<% end %>
-			</h1>
-		</section>
-		<hr>
 		<%= render 'layouts/newsfeed' %>
-
 	</aside>
 	<div class="span8">
+		<h1>
+			<%= link_to image_tag(@micropost.user.image ,:size => "50x50"), @micropost.user %>
+			<%= link_to '@'+@micropost.user.nickname, @micropost.user %>
+		</h1>
+		<h1><%= @micropost.content %></h1>
+		<span class="timestamp">Posted <%= time_ago_in_words(@micropost.created_at) %> ago.</span>
+		<% if current_user == @micropost.user %>
+		<%= link_to "d", @micropost, method: :delete, data: { confirm: '本当に消してしまうん？' }, title: @micropost.content, class:"common_icons", style:"z-index:10" %>
+		<% end %>
+
+
 		<% if @micropost.detail? %>
 			<div class='detail'>
 				<span>詳細: </span>
