--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -107,6 +107,16 @@ header{
   border-left: #ddd 1px solid;
   border-right: #ddd 1px solid;
   // float:right;
+  .userinfo{
+    text-align: center;
+    margin:20px 0 -10px;
+    .username{
+      font-family:"mplus-1c-thin";
+      font-size: 30px;
+      display:inline;
+      vertical-align: middle;
+    }
+  }
 }
 .span8{
   width: 600px;
