--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -2,11 +2,11 @@
 <div class="modal" id="myModal">
   <div class="modal-header">
     <span class="close closeBtn" data-dismiss="modal">×</span>
-    <h3>Notifications</h3>
+    <h3>-Notifications-</h3>
   </div>
   <div class="modal-body">
-    <%= for item in (user_notifications current_user) do %>
-      <%= item %> <br>
+    <% for item in (user_notifications current_user) do %>
+      <%= render 'shared/news_feed_item', item: item %>
     <% end %>
   </div>
   <div class="modal-footer">
@@ -56,7 +56,12 @@ if("<%= (user_notifications current_user).length %>" == 0)
             <li><%= link_to "Users", users_path %></li>
             <li id="fat-menu" class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                Account <b class="caret"></b>
+                <% if signed_in? %>
+                  <span class="user_icon_in_menu"><%= image_tag current_user.image%></span>
+                <% else %>
+                  Account
+                <% end %>
+                <b class="caret"></b>
               </a>
               <ul class="dropdown-menu">
                 <li><%= link_to "Profile", current_user %></li>
