--- a/app/views/shared/_news_feed_item.html.erb
+++ b/app/views/shared/_news_feed_item.html.erb
@@ -9,7 +9,7 @@
 		<%= link_to image_tag(item.micropost.user.image,:size => "22x22"),item.micropost.user %>
 		<span class="truncate"><%= link_to item.micropost.content,  item.micropost %></span>
 	<% elsif item.class == Micropost %>
-		<span class="action">posted <%= link_to item.content, item %></span>
+		<span class="create action">→<span class="common_icons">s</span><%= link_to item.content, item %></span>
 	<% elsif item.class == Comment %>
 		<span class="comments action">→<span class="common_icons">h</span>→</span>
 		<%= link_to image_tag(item.micropost.user.image,:size => "22x22"), item.micropost.user %>
