Modify margin of hr

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -115,6 +115,9 @@ header{
   border-left: #ddd 1px solid;
   border-right: #ddd 1px solid;
   // float:right;
+  hr{
+    margin:10px 0;
+  }
   .userinfo{
     text-align: center;
     margin:20px 0 -10px;
