--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -548,6 +548,9 @@ button.btn, input[type="submit"].btn{
   .modal-header{
     // border-bottom: 1px solid #888;
   }
+  modal-body{
+    padding:20px 15px 0;
+  }
 }
 
 .user_icon_in_menu{
