--- a/app/views/shared/_news_feed_item.html.erb
+++ b/app/views/shared/_news_feed_item.html.erb
@@ -1,18 +1,18 @@
 <div class="newsfeed">
-	<%= link_to image_tag(item.user.image,:size => "22x22"), item.user %>
+	<%= link_to image_tag(item.user.image,:size => "22x22"), item.user.nickname %>
 	<% if item.class == Interest %>
 		<span class="interests action">→<span class="common_icons">a</span>→</span>
-		<%= link_to image_tag(item.micropost.user.image,:size => "22x22"),item.micropost.user %>
+		<%= link_to image_tag(item.micropost.user.image,:size => "22x22"),item.micropost.user.nickname %>
 		<span class="truncate"><%= link_to item.micropost.content,  item.micropost %></span>
 	<% elsif item.class == Star %>
 		<span class="stars action">→<span class="common_icons">b</span>→</span>
-		<%= link_to image_tag(item.micropost.user.image,:size => "22x22"),item.micropost.user %>
+		<%= link_to image_tag(item.micropost.user.image,:size => "22x22"),item.micropost.user.nickname %>
 		<span class="truncate"><%= link_to item.micropost.content,  item.micropost %></span>
 	<% elsif item.class == Micropost %>
 		<span class="create action">→<span class="common_icons">s</span><%= link_to item.content, item %></span>
 	<% elsif item.class == Comment %>
 		<span class="comments action">→<span class="common_icons">h</span>→</span>
-		<%= link_to image_tag(item.micropost.user.image,:size => "22x22"), item.micropost.user %>
+		<%= link_to image_tag(item.micropost.user.image,:size => "22x22"), item.micropost.user.nickname %>
 		<span class="truncate"><%= link_to item.micropost.content,  item.micropost %></span>
 	<% end %>
 	<br>
