--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -26,7 +26,7 @@
 		<% if @user.microposts.any? %>
 		<h3>@<%= @user.nickname %> (<%= @user.microposts.count %>)</h3>
 		<ol class="microposts">
-			<%= render @microposts %>
+			<%= render partial: 'shared/feed_item', collection: @microposts %>
 		</ol>
 		<%= will_paginate @microposts %>
 		<% end %>
