--- a/app/views/microposts/show.html.erb
+++ b/app/views/microposts/show.html.erb
@@ -5,8 +5,7 @@
 	</aside>
 	<div class="span8">
 		<h1>
-			<%= link_to image_tag(@micropost.user.image ,:size => "50x50"), @micropost.user %>
-			<%= link_to '@'+@micropost.user.nickname, @micropost.user %>
+			<%= render 'shared/user_info', user: @micropost.user %>
 		</h1>
 		<h1><%= @micropost.content %></h1>
 		<span class="timestamp">Posted <%= time_ago_in_words(@micropost.created_at) %> ago.</span>
