--- a/app/views/shared/_user_info.html.erb
+++ b/app/views/shared/_user_info.html.erb
@@ -1,8 +1,8 @@
 <span class='userinfo'>
-	<a href="<%= user.nickname %>">
+	<a href="<%= '/'+user.nickname %>">
 		<%= showProfImage user %>
 	</a>
-	<span class='username'><%= link_to '@'+user.nickname, user.nickname%></span>
+	<span class='username'><%= link_to '@'+user.nickname, '/'+user.nickname%></span>
 </span>
 <br>
 <!-- <h1>
