--- a/app/views/microposts/show.html.erb
+++ b/app/views/microposts/show.html.erb
@@ -22,54 +22,7 @@
 		<% end %>
 			<br>
 
-			<div class="responses">
-				<div class="stars">
-					<% if current_user == @micropost.user %>
-						一緒にやりたい！:
-					<% else %>
-					<%= form_tag({:controller => 'star', :action => 'toggle_star'}, {:name => 'toggle_star', :remote => true}) do %>
-					<input type="hidden" value="<%= @micropost.id %>" name="micropost_id">
-					<span class="common_icons">b</span>
-
-					<%= submit_tag "一緒にやりたい！" , {:class => 'star_submit'} %>
-					<% end %>
-
-					<% end %>
-					<span id="starsNum"><%= @micropost.stars.length %></span>
-					<% @micropost.stars.each do |s| %>
-						<%= link_to image_tag(s.user.image ,:size => "22x22"), s.user %>
-						<% if s.user == current_user %>
-							<script>
-								$('.star_submit').addClass('already')
-							</script>
-						<% end %>
-					<% end %>
-				</div>
-<br>
-
-		<div class="interests">
-			<% if current_user == @micropost.user %>
-				興味ある！:
-			<% else %>
-				<%= form_tag({:controller => 'interest', :action => 'toggle_interest'}, {:name => 'toggle_interest', :remote => true}) do %>
-				<input type="hidden" value="<%= @micropost.id %>" name="micropost_id">
-				<!-- <span class="js-toggle_interest" data-num="<%= @micropost.id %>">スターボタン</span> -->
-				<span class="common_icons">q</span>
-				<%= submit_tag "興味ある！", {:class => 'interest_submit'}  %>
-				<% end %>
-			<% end %>
-			<span id="interestsNum"><%= @micropost.interests.length %></span>
-			<% @micropost.interests.each do |s| %>
-			        <%= link_to image_tag(s.user.image ,:size => "22x22"), s.user %>
-			        <% if s.user == current_user %>
-				        <script>
-					        $('.interest_submit').addClass('already')
-				        </script>
-			        <% end %>
-			<% end %>
-		</div>
-			</div>
-
+			<%= render partial: 'shared/responses', locals: { feed_item: @micropost } %>
 
 		<script>
 
