--- a/app/views/shared/_feed_item.html.erb
+++ b/app/views/shared/_feed_item.html.erb
@@ -10,72 +10,7 @@
         <span>(詳細文あり)</span>
       <% end %>
     </div>
-  <% if current_user?(feed_item.user) %>
-    <%#= link_to "delete", feed_item, method: :delete, data: { confirm: "You sure?" }, title: feed_item.content, :class => 'delete_button' %>
-    <!-- 一緒にやりたい人がいる場合 -->
-    <div class="staredInfo">
-      <% if feed_item.stars.length > 0 %>
-        <br>
-        <p style='float: left;'>一緒にやりたい！:
-          <span class='starsNum'><%= feed_item.stars.length %></span>人
-        </p>
-        <% feed_item.stars.each do |s| %>
-          <%= link_to image_tag(s.user.image ,:size => "22x22"), s.user.nickname %>
-        <% end %>
-      <% end %>
-    </div>
-    <!-- 興味ある人がいる場合 -->
-    <% if feed_item.interests.length > 0 %>
-    <br>
-    <div class="interestedInfo">
-      <p style='float: left;'>興味ある！:
-      <span class='interestsNum'><%= feed_item.interests.length %></span>人
-         </p>
-      <% feed_item.interests.each do |s| %>
-        <%= link_to image_tag(s.user.image ,:size => "22x22"), s.user.nickname %>
-        <% end %>
-      </div>
-    <% end %>
-  <% else %>
-  <div class='stars'>
-    <%= form_tag({:controller => 'star', :action => 'toggle_star'}, {:name => 'toggle_star', :remote => true, :class => 'star_button'}) do %>
-      <input type="hidden" value="<%= feed_item.id %>" name="micropost_id">
-      <span class="common_icons">b</span>
-      <%= submit_tag "一緒にやりたい！", {:class => 'star_submit' } %>
-    <% end %>
-    <div class='starInfo'>
-      <span class='starsNum'><%= feed_item.stars.length %></span>人
-      <% feed_item.stars.each do |s| %>
-        <%= link_to image_tag(s.user.image ,:size => "22x22"), s.user.nickname %>
-          <% if s.user == current_user %>
-            <script>
-              $('#'+<%= feed_item.id %>).children('.stars').children('form').children('input').addClass('already')
-            </script>
-          <% end %>
-      <% end %>
-    </div>
-  </div>
-    <!-- 興味ある！ -->
-    <br>
-    <div class='interests'>
-      <%= form_tag({:controller => 'interest', :action => 'toggle_interest'}, {:name => 'toggle_interest', :remote => true, :class => 'interest_button'}) do %>
-      <input type="hidden" value="<%= feed_item.id %>" name="micropost_id">
-      <span class="common_icons">q</span>
-      <%= submit_tag "興味ある！", {:class => 'interest_submit' } %>
-      <% end %>
-      <div class='interestInfo'>
-        <span class='interestsNum'><%= feed_item.interests.length %></span>人
-        <% feed_item.interests.each do |s| %>
-        <%= link_to image_tag(s.user.image ,:size => "22x22"), s.user.nickname %>
-        <% if s.user == current_user %>
-            <script>
-              $('#'+<%= feed_item.id %>).children('.interests').children('form').children('input').addClass('already')
-            </script>
-          <% end %>
-        <% end %>
-      </div>
-    </div>
-    <% end %>
+    <%= render partial: 'shared/responses', locals: { feed_item: feed_item } %>
     <span class="timestamp">
       Posted <%= time_ago_in_words(feed_item.created_at) %> ago.
     </span>
