--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -95,6 +95,8 @@ img{
 
 .interests, .interestedInfo{
   clear: both;
+  height: 26px;
+  margin-bottom: 4px;
 }
 .staredInfo{
   margin:-10px 0px;
@@ -200,11 +202,7 @@ input[type="submit"]{
 
 .newsTimestamp{
   margin-top: 7px;
-  // border-right: 1px #eee solid;
-  // padding-left: 3px;
-  // border-bottom: 1px #eee solid;
-  // border:1px #bbb dashed;
-  border-radius: 8px;
+  // border-radius: 8px;
   background: #eee;
   padding:0 4px;
 }
@@ -383,7 +381,9 @@ input {
   margin: 12px;
   padding: 0px 2px 1px 6px;
   float: right;
-  border-radius: 10px;
+  // border-radius: 10px;
+  clear: both;
+  margin-top: -35px;
 }
 .gravatar {
   float: left;
@@ -417,7 +417,6 @@ aside {
   -moz-transition: all 0.3s;
   transition: all 0.3s;
   text-shadow: none;
-  box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.4), 0 1px 2px rgba(0, 0, 0, 0.85)
 }
 .btn-2i {
   border-radius: 50%;
@@ -550,6 +549,9 @@ button.btn, input[type="submit"].btn{
   }
   modal-body{
     padding:20px 15px 0;
+  }
+  .btn{
+    box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.4), 0 1px 2px rgba(0, 0, 0, 0.85)
   }
 }
 
