--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -1,14 +1,16 @@
 <li>
 	<%#= link_to showProfImage comment.user%>
-        <%= link_to image_tag(comment.user.image ,:size => "22x22"), comment.user %>
+        <%= link_to image_tag(comment.user.image ,:size => "22x22"), '/'+comment.user.nickname %>
 	<span class="user">
-		<%= link_to comment.user.name+' ( @'+comment.user.nickname+' )' , comment.user %>
+		<%= link_to comment.user.name+' ( @'+comment.user.nickname+' )' , '/'+comment.user.nickname %>
 	</span>
 	<span class=""><%= comment.content %></span>
 	<span class="timestamp">
 		Posted <%= time_ago_in_words(comment.created_at) %> ago.
 	</span>
 	<% if current_user?(comment.user) %>
-		<%= link_to "d", comment, method: :delete, data: { confirm: '本当に消してしまうん？' }, title: comment.content, class:"common_icons", style:"z-index:10" %>
+		<span class="trash">
+			<%= link_to "d", comment, method: :delete, data: { confirm: '本当に消してしまうん？' }, title: comment.content, class:"common_icons", style:"z-index:10" %>
+		</span>
 	<% end %>
 </li>
